Customization for the site

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,18 +8,17 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 col-lg-offset-2">
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete
-          source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy
-          customization.</p>
-      </div>
-      <div class="col-lg-4">
-        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or
-          a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+      <div class="col-lg-4 text-center">
+        <p>Originally from Randallstown, MD - Baltimore-based singer/songwriter Mo is clearly influenced by every piece of music 
+and art that crosses her path. Folk, R&B, grunge and jazz, a swirling tumult that gives her a uniquely CHARM CITY sound. 
+With a voice careening from whispered intimacy to sultry, smoky power, she makes music that is angsty, soulful, raw - and 
+she does it while supporting the communities around her: not just my own Baltimore-area open mics, but Lee Allen's 
+<a href="https://www.collaboration-laboratory.com/">Collaboration Laboratory</a>, a powerful MIXER of musicians and artists based 
+in Baltimore City.  - <a href="https://www.ilyaimy.com/ilyaimy-ill-yay-mee/rob-hinkal/">Rob Hinkal: FocusMusic, Executive Director</a> </p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-          <i class="fa fa-download"></i> Download Theme
+        <a href="https://www.youtube.com/live/rmh5fVoCs8w?si=12qnohVXxWNBvnLH&t=2042" class="btn btn-lg btn-outline">
+          <i class="fa fa-download"></i> Kennedy Center
         </a>
       </div>
     </div>
