--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,8 +9,7 @@
     </div>
     <div class="row">
       <div class="col-lg-4 text-center">
-        <p>Originally from Randallstown, MD - Baltimore-based singer/songwriter Mo is clearly influenced by every piece of music 
-and art that crosses her path. Folk, R&B, grunge and jazz, a swirling tumult that gives her a uniquely CHARM CITY sound. 
+        <p>Originally from Randallstown, MD - Baltimore-based singer/songwriter Mo is clearly influenced by every piece of music and art that crosses her path. Folk, R&B, grunge and jazz, a swirling tumult that gives her a uniquely CHARM CITY sound. 
 With a voice careening from whispered intimacy to sultry, smoky power, she makes music that is angsty, soulful, raw - and 
 she does it while supporting the communities around her: not just my own Baltimore-area open mics, but Lee Allen's 
 <a href="https://www.collaboration-laboratory.com/">Collaboration Laboratory</a>, a powerful MIXER of musicians and artists based 
@@ -18,7 +17,7 @@ in Baltimore City.  - <a href="https://www.ilyaimy.com/ilyaimy-ill-yay-mee/rob-h
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <a href="https://www.youtube.com/live/rmh5fVoCs8w?si=12qnohVXxWNBvnLH&t=2042" class="btn btn-lg btn-outline">
-          <i class="fa fa-download"></i> Kennedy Center
+          Kennedy Center
         </a>
       </div>
     </div>
