--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 text-center">
+      <div class="text-center">
         <p>Originally from Randallstown, MD - Baltimore-based singer/songwriter Mo is clearly influenced by every piece of music and art that crosses her path. Folk, R&B, grunge and jazz, a swirling tumult that gives her a uniquely CHARM CITY sound. 
 With a voice careening from whispered intimacy to sultry, smoky power, she makes music that is angsty, soulful, raw - and 
 she does it while supporting the communities around her: not just my own Baltimore-area open mics, but Lee Allen's 
