test to fix blank hyperlink

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
         <p>Originally from Randallstown, MD - Baltimore-based singer/songwriter Mo is clearly influenced by every piece of music and art that crosses her path. Folk, R&B, grunge and jazz, a swirling tumult that gives her a uniquely CHARM CITY sound. 
 With a voice careening from whispered intimacy to sultry, smoky power, she makes music that is angsty, soulful, raw - and 
 she does it while supporting the communities around her: not just my own Baltimore-area open mics, but Lee Allen's 
-<a href="https://www.collaboration-laboratory.com/">Collaboration Laboratory</a>, a powerful MIXER of musicians and artists based 
+<a href="https://www.collaboration-laboratory.com/" style="color:#C2B280;text-decoration:underline;">Collaboration Laboratory</a>, a powerful MIXER of musicians and artists based 
 in Baltimore City.  - <a href="https://www.ilyaimy.com/ilyaimy-ill-yay-mee/rob-hinkal/">Rob Hinkal: FocusMusic, Executive Director</a> </p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
